bynkc/tests/fixtures/positive/11_function_one_param/input.karn
commons demo {
  fn negate(x: Int) -> Int {
    -x
  }
}
