bynkc/tests/fixtures/negative/06_unknown_type/input.karn
commons demo {
  fn use_it(x: Missing) -> Int {
    0
  }
}
